fixed button and chatbar alignment

--- a/static/style.css
+++ b/static/style.css
@@ -48,7 +48,7 @@ input[type="text"] {
 
 button {
     position: relative;
-    left: 3vh;
+    left: 4vh;
     padding: 10px 20px;
     background-color: #333;
     color: white;
